--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ p {
         /*        max-width: 500px;*/
         /*        border: 2px solid black;*/
         /*        padding: 50px 20px;*/
-        margin: 60px 20px;
+        margin: 40px 20px;
     }
     .user-scrolls {
         padding: 20px;
@@ -105,10 +105,10 @@ p {
         -webkit-transition: all .2s ease-in-out;
     }
     #hero {
-        font-size: 55px;
-        line-height: 57px;
+        font-size: 52px;
+        line-height: 50px;
         height: 85vh;
-        text-align: center;
+        text-align: left;
     }
     #hero h4 {
         font-size: 20px;
@@ -173,6 +173,7 @@ p {
         line-height: 108px;
         height: 85vh;
         margin-top: -20px;
+        text-align: center;
     }
     .button {
         padding-top: 0px;
@@ -209,7 +210,7 @@ p {
 
 @media (min-width: 1068px) {
     #container {
-        margin: 50px;
+        margin: 90px 50px;
     }
     .user-scrolls {
         padding: 20px 50px;
@@ -232,6 +233,8 @@ p {
         padding-bottom: 140px;
         clear: both;
         line-height: 1.2;
+        margin: auto;
+        text-align: center;
     }
     #hero h4 {
         max-width: 1000px;
@@ -245,6 +248,7 @@ p {
     }
     .button {
         padding-top: 0px;
+        text-align: center;
     }
     .button a {
         font-size: 35px;
@@ -309,7 +313,7 @@ p {
 .nav-hamburger {
     width: 100%;
     height: 100%;
-    background: white;
+    background: #af1b1b;
     position: fixed;
     top: -100%;
     right: 0;
