--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ p {
         font-size: 52px;
         line-height: 50px;
         height: 85vh;
-        text-align: left;
+        text-align: center;
     }
     #hero h4 {
         font-size: 20px;
