--- a/css/style.css
+++ b/css/style.css
@@ -27,22 +27,6 @@ p {
     margin: 0;
 }
 
-.email {
-    color: #b7b7b7;
-    text-decoration: none;
-    border-bottom: 10px solid #222;
-    transition: all .2s ease-in-out;
-    -webkit-transition: all .2s ease-in-out;
-}
-
-.email:hover {
-    color: #b7b7b7;
-    text-decoration: none;
-    border-bottom: 5px solid #222;
-    transition: all .2s ease-in-out;
-    -webkit-transition: all .2s ease-in-out;
-}
-
 .logo {
     margin: 0;
     padding: 0;
@@ -388,30 +372,6 @@ header {
     -webkit-transform: translateY(-9px) rotate(45deg);
 }
 
-
-/*
-.moveOne {
-    opacity: 0;
-    transition: all 1.4s ease-in-out;
-    -webkit-transition: all 1.4s ease-in-out;
-}
-.moveTwo {
-    -webkit-transform: translateY(-9px);
-    -webkit-transform: translate3d(0, -10px, 0);
-    -webkit-transform: rotate(45deg);
-    transition: all 1.4s ease-in-out;
-    -webkit-transition: all 1.4s ease-in-out;
-}
-.moveThree {
-    -webkit-transform: translateY(-18px);
-    -webkit-transform: translate3d(0, -10px, 0);
-    -webkit-transform: rotate(-45deg);
-    transition: all 1.4s ease-in-out;
-    -webkit-transition: all 1.4s ease-in-out;
-}
-*/
-
-
 .button a {
     color: white;
     text-decoration: none;
@@ -451,4 +411,18 @@ i {
 .no-scrolling {
     overflow: hidden;
     height: 100%:
+}
+
+.letter {
+    width: 1000px;
+    height: 500px;
+    margin: 40px 0;
+    border: 10px solid transparent;
+    padding: 15px;
+    border-image: url(img/barber.png) 2% round;
+    border-image-repeat: round;
+    box-shadow: 0 2px 31px rgba(0, 0, 0, .2);
+    font-family: 'Varela Round', sans-serif;
+    resize: none;
+    font-size: 25px;
 }
