--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,12 @@ p {
         transition: all .2s ease-in-out;
         -webkit-transition: all .2s ease-in-out;
     }
+    #hero p {
+        line-height: 40px;
+    }
     #hero {
-        font-size: 45px;
-        line-height: 50px;
+        font-size: 32px;
+        line-height: 75px;
         text-align: center;
     }
     #hero h4 {
