--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ p {
         color: white;
         margin: 50px 0;
         cursor: pointer;
+        border: 0;
     }
 }
 
@@ -194,6 +195,7 @@ p {
         color: white;
         margin: 10px 0;
         cursor: pointer;
+        border: 0;
     }
 }
 
@@ -302,6 +304,7 @@ p {
         width: 40%;
         margin: 150px 0;
         cursor: pointer;
+        border: 0;
     }
 }
 
