--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ p {
 }
 
 footer {
-    background: #8e2121;
+    background: #5f1414;
     color: #fff;
     text-align: center;
     bottom: 0;
